# sql-database-rust

./: BUILD_INSTRUCTIONS.md  Cargo.toml  LICENSE  README.md
examples/: basic_usage.rs  sharding_demo.rs
src/: lib.rs  main.rs
src/query/: executor.rs  mod.rs  parser.rs
src/sharding/: mod.rs
src/storage/: btree.rs  mod.rs  page.rs  table.rs
